adding header component and links to home, shop, contact

--- a/src/App.scss
+++ b/src/App.scss
@@ -10,8 +10,13 @@ html {
   font-size: 62.5%;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+
 body {
   font-family: "Open Sans Condensed", sans-serif;
   font-size: 1.6rem;
-  padding: 2rem 8rem;
+  padding: 2rem 6rem;
 }
